@@ -213,6 +213,8 @@ x2goclient (4.1.1.0-0x2go1) UNRELEASED; urgency=medium
       translation file.
     - res/i18n/x2goclient_nl.ts: fix whitespace issues in Dutch translation
       file and re-add numerus form translation.
+    - res/i18n/x2goclient_nb_no.ts: various fixups for Bokmål (Norway)
+      translation file, including numerus form.
   * x2goclient.spec:
     - Respect %{optflags} and pass QMAKE_STRIP=: to fix missing debug info
       issues.
